--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </div>
         </nav>
         <!-- Section landin -->
-        <section id="home" class="landin"></section>
+        <section id="home" class="landin">
+            <!-- <img src="/img/Landing1.png"  alt=""> -->
+        </section>
     </header>
     <!-- Main-container  -->
     <main>
@@ -82,10 +84,10 @@
                 </div>
                 <div class="container-box1">
                     <div class="box-item"><img src="/img/box1.gif" alt=""></div>
-                    <div class="box-item"><img src="/img/box2.gif" alt=""></div>
+                    <div class="box-item"><img src="/img/box5.gif" alt=""></div>
                     <div class="box-item"><img src="/img/box3.gif" alt=""></div>
                     <div class="box-item"><img src="/img/box4.gif" alt=""></div>
-                    <div class="box-item"><img src="/img/box5.gif" alt=""></div>
+                    <div class="box-item"><img src="/img/box2.gif" alt=""></div>
                     <div class="box-item"><img src="/img/box6.gif" alt=""></div>
                 </div>
             </article>
@@ -214,17 +216,18 @@
                 <h6>Join us on Discord</h6>
             </a>
         </section>
-        <!-- FAQS -->
-        <aside class="faqs">
-            <ul class="faqs-content">
-                <li><img src="/img/FQAsArtboard.png" alt=""></li>
-                <li>What are NFTs / What is Minting?</li>
-                <li>What are Smart Contracts?</li>
-                <li>What is a Metaverse?</li>
-                <li>Why do you include Whales?</li>
-            </ul>
-        </aside>
+
     </main>
+            <!-- FAQS -->
+    <aside class="faqs">
+        <ul class="faqs-content">
+            <li><img src="/img/FQAsArtboard.png" alt=""></li>
+            <li>What are NFTs / What is Minting?</li>
+            <li>What are Smart Contracts?</li>
+            <li>What is a Metaverse?</li>
+            <li>Why do you include Whales?</li>
+        </ul>
+    </aside>
     <footer class="footer">
         <div class="enlaces-footer">
             <img src="/img/icon.png" alt="">
