--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="https://discord.gg/ZZ8vXWkH"><i class="fab fa-discord"></i></a>
                 </li>
             </ul>
-            <div class="btn-bars">
+            <div id="btn-bar" class="btn-bars">
                 <i class="fas fa-bars" title="Menu"></i>
             </div>
         </nav>
